--- a/examples/index.html
+++ b/examples/index.html
@@ -8,8 +8,7 @@
 
 <body>
   <div id="app">
-    <a class="link" href="examples/index.html">示例</a>
-    <a class="link" href="doc/index.html">文档</a>
+    <a class="link" href="basic/index.html">基础示例</a>
   </div>
 </body>
 
