add svg example

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,7 @@
 <body>
   <div id="app">
     <a class="link" href="basic/index.html">基础示例</a>
+    <a class="link" href="svg/index.html">SVG示例</a>
   </div>
 </body>
 
