--- a/examples/with-svg/index.html
+++ b/examples/with-svg/index.html
@@ -13,11 +13,12 @@
     <status-bar :state="state"></status-bar>
     <div id="zoom-container">
       <div id="zoom-item">
-        <img src="../images/wallpaper.jpg">
+        <svg id="svg"></svg>
       </div>
     </div>
   </div>
   <script src="../../dist/simple-zoom.js"></script>
+  <script src="../lib/d3/d3.min.js"></script>
   <script src="../lib/vue/vue.min.js"></script>
   <script src="../components/status-bar/index.js"></script>
   <script src="./index.js"></script>
